KSCM-1763 - Added code for alignment issue in both find course and find course proposal.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-lum/trunk@67072 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
+++ b/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
@@ -56,7 +56,7 @@
     width: 100%;
 }
 
-.ks-cm-find-course-proposal .ks-uif-footer div, .ks-cm-find-course-proposal .ks-uif-footer div {
+.ks-cm-find-course-proposal .ks-uif-footer div, .ks-cm-find-course .ks-uif-footer div {
 	float: none;
 	margin-left: 356px;
     white-space: nowrap;
